chore: Add/edit some links

--- a/instructions/3.md
+++ b/instructions/3.md
@@ -9,7 +9,7 @@ change the ```sku``` accordingly.
 
 Consider, modifying the link below, so that it points to the ```./arm/app_service.json``` file in your repository.
 
-[![Deploy to Azure](https://aka.ms/deploytoazurebutton)](https://portal.azure.com/#create/Microsoft.Template/uri/https%3A%2F%2Fraw.githubusercontent.com%2Fwolfpaulus%2Fcicd24%2Fmain%2Farm%2Fapp_service.json)
+[![Deploy to Azure](https://aka.ms/deploytoazurebutton)](https://portal.azure.com/#create/Microsoft.Template/uri/https%3A%2F%2Fraw.githubusercontent.com%2Fnrdave%2Fcicd24%2Fmain%2Farm%2Fapp_service.json)
 
 Clicking the button will log you into Azure and create an Azure App Service as it is declared in the ./arm/app_service.json file.
 
